--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><title>fedirect</title><meta charset=utf-8>
+<!doctype html><html lang=en><title>fedirect</title><meta charset=utf-8>
 <meta name=viewport content="width=device-width">
 <meta name=color-scheme content="light dark">
 
