refactor stuff, add type specification

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <p>
 Usage: /?id=&lt;user&gt;@&lt;host&gt;
 
+<p>
+Example: /?id=android@lemmy.world&amp;type=Person
+
 <nav>
   <a href="https://toolsadmin.wikimedia.org/tools/id/fedirect">Toolsadmin</a>
   <a href="https://gitlab.wikimedia.org/toolforge-repos/fedirect">GitLab</a>
